--- a/SmartFinance+.ipynb
+++ b/SmartFinance+.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "919af75c",
+   "metadata": {},
+   "source": [
+    "# Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44fefaa0",
+   "metadata": {},
+   "source": [
+    "**Basic implementation of SmartFinance+ using a hypothetical transaction data to predict future transactions using Linear Regression** "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e932adcf",
+   "execution_count": 6,
+   "id": "aabb79a9",
    "metadata": {},
    "outputs": [],
    "source": [
